--- a/.github/actions/install-ubuntu-deps/action.yml
+++ b/.github/actions/install-ubuntu-deps/action.yml
@@ -8,3 +8,12 @@ runs:
         sudo apt-get update
         sudo apt-get install ocl-icd-opencl-dev libhwloc-dev
       shell: bash
+    - run: |
+        sudo sysctl -w net.core.rmem_max=2500000
+        sudo sysctl -w net.core.wmem_max=2500000
+      shell: bash
+    - run: |
+        sudo echo "* soft nofile 256000" >> /etc/security/limits.conf
+        sudo echo "* hard nofile 512000" >> /etc/security/limits.conf
+        sudo sysctl -p
+      shell: bash
