--- a/.github/actions/install-ubuntu-deps/action.yml
+++ b/.github/actions/install-ubuntu-deps/action.yml
@@ -5,10 +5,7 @@ runs:
   using: composite
   steps:
     - run: |
+        sudo apt install curl ca-certificates gnupg
         sudo apt-get update
         sudo apt-get install ocl-icd-opencl-dev libhwloc-dev
-      shell: bash
-    - run: |
-        sudo sysctl -w net.core.rmem_max=2500000
-        sudo sysctl -w net.core.wmem_max=2500000
       shell: bash
