--- a/.github/actions/install-go/action.yml
+++ b/.github/actions/install-go/action.yml
@@ -4,6 +4,9 @@ description: Install Go for Filecoin Lotus
 runs:
   using: composite
   steps:
+    - uses: actions/setup-go@v5
+      with:
+        go-version: stable
     - id: go-mod
       uses: ipdxco/unified-github-workflows/.github/actions/read-go-mod@main
     - uses: actions/setup-go@v5
