--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,10 +30,24 @@ jobs:
       - uses: ./.github/actions/install-go
       - id: test
         env:
-          CONFIG: |
+          DEFAULTS: |
+            {
+              "name": "",
+              "packages": [],
+              "runner": ["self-hosted", "linux", "x64", "large"],
+              "go_test_flags": "",
+              "skip_conformance": "1",
+              "test_rustproofs_logs": "0",
+              "format": "standard-verbose",
+              "needs_params": false,
+              "needs_statediff": false,
+              "needs_yugabytedb": false,
+            }
+          GROUPS: |
             [
               {
                 "name": "multicore-sdr",
+                "runner": "ubuntu-latest",
                 "packages": ["./storage/sealer/ffiwrapper"],
                 "go_test_flags": "-run=TestMulticoreSDR",
                 "test_rustproofs_logs": "1"
@@ -85,7 +99,7 @@ jobs:
                 "needs_params": true
               }
             ]
-        run: go run ./.github/scripts/extend-test-groups.go -config "$CONFIG" -output "$GITHUB_OUTPUT"
+        run: go run ./.github/scripts/extend-test-groups.go -defaults "$DEFAULTS" -groups "$GROUPS" -output "$GITHUB_OUTPUT"
   fetch:
     name: Fetch Proof Prameters
     runs-on: ubuntu-latest
@@ -110,17 +124,51 @@ jobs:
           lookup-only: true
       - if: steps.params.outputs.cache-hit != 'true'
         run: make lotus
-        shell: bash
       - if: steps.params.outputs.cache-hit != 'true'
         run: ./lotus fetch-params 2048
-        shell: bash
       - if: steps.params.outputs.cache-hit != 'true'
         uses: actions/cache/save@v4
         with:
           key: ${{ steps.cache.outputs.key }}
           path: ${{ steps.cache.outputs.path }}
+  cache:
+    name: Cache Go Modules
+    runs-on: ubuntu-latest
+    outputs:
+      key: ${{ steps.cache.outputs.key }}
+      path: ${{ steps.cache.outputs.path }}
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: 'recursive'
+      - uses: ./.github/actions/install-ubuntu-deps
+      - uses: ./.github/actions/install-go
+      - id: cache
+        env:
+          KEY: ${{ github.workflow }}-${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+        run: |
+          echo "key=$KEY" | tee -a $GITHUB_OUTPUT
+          echo "path<<EOF" | tee -a $GITHUB_OUTPUT
+          echo "$(go env GOPATH)/pkg/mod" | tee -a $GITHUB_OUTPUT
+          echo "$(go env GOCACHE)" | tee -a $GITHUB_OUTPUT
+          echo "EOF" | tee -a $GITHUB_OUTPUT
+      - id: modules
+        uses: actions/cache/restore@v4
+        with:
+          key: ${{ steps.cache.outputs.key }}
+          path: ${{ steps.cache.outputs.path }}
+          lookup-only: true
+      - if: steps.modules.outputs.cache-hit != 'true'
+        run: go install gotest.tools/gotestsum@latest
+      - if: steps.modules.outputs.cache-hit != 'true'
+        run: go test -run none -mod=readonly -i ./...
+      - if: steps.modules.outputs.cache-hit != 'true'
+        uses: actions/cache/save@v4
+        with:
+          key: ${{ steps.cache.outputs.key }}
+          path: ${{ steps.cache.outputs.path }}
   test:
-    needs: [discover, fetch]
+    needs: [discover, cache, fetch]
     name: Test (${{ matrix.name }})
     runs-on: ${{ github.repository == 'filecoin-project/lotus' && matrix.runner || 'ubuntu-latest' }}
     strategy:
@@ -133,6 +181,11 @@ jobs:
           submodules: 'recursive'
       - uses: ./.github/actions/install-ubuntu-deps
       - uses: ./.github/actions/install-go
+      - uses: actions/cache/restore@v4
+        with:
+          key: ${{ needs.cache.outputs.key }}
+          path: ${{ needs.cache.outputs.path }}
+          fail-on-cache-miss: true
       - run: go install gotest.tools/gotestsum@latest
       - run: make deps
       - if: ${{ matrix.needs_params }}
